--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Site wide configuration
 
-title: Site Title
+title: Petra Bleeker Research Group
 locale: en_US
 logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Your Name
+  name: Petra Bleeker
   avatar: bio-photo.jpg
-  bio: "A brief description of yourself."
+  bio: Associate-professor Plant Physiology Department (SILS, University of Amsterdam)
   email: #emailaddress
   # Do not include the @ symbol in your Twitter username
   twitter: #username
   linkedin: #username
-  github: #username
+  github: BleekerLab
   orcid: # ID Number (ex. 0000-0000-0000-0000)
   researchgate: #username
   mendeley: #username
