add dataset page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,5 +17,8 @@
 - title: Bioinformatics
   url: /pages/bioinformatics/
 
+- title: Data
+  url: /pages/datasets/
+
 - title: CV
   url: /pages/resume/
